# hacknet-ver-1.2247

./: .gitignore  pyproject.toml
notes/: possible_levels.md  story.md  virtual.md
src/: better_exceptions.py  game_timer.py  loguru_config.py  main.py
src/lib/: utils.py
src/lib/graphics/: conn_pygame_graphics.py  constants.py  utils.py
src/simulation/: application.py  network.py  node.py
src/simulation/fs/: __init__.py  constants.py  directory.py  file.py  permissions.py  storage_unit.py  user.py
src/simulation/network/: __init__.py  base.py  consumer_routers.py  fixed_routers.py
tests/: network_test.py
