[project]
name = "game"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bidict>=0.23.1",
    "loguru>=0.7.3",
    "pygame>=2.6.1",
    "pytest>=9.0.2",
    "pytz>=2025.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
